WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140079
Resolve mirroring and variant in Font instead of FontGlyphs
https://bugs.webkit.org/show_bug.cgi?id=140079
Summary
Resolve mirroring and variant in Font instead of FontGlyphs
Antti Koivisto
Reported
2015-01-05 06:47:08 PST
More focused FontGlyphs.
Attachments
patch
(4.66 KB, patch)
2015-01-05 06:58 PST
,
Antti Koivisto
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-01-05 06:58:43 PST
Created
attachment 243976
[details]
patch
Antti Koivisto
Comment 2
2015-01-06 06:50:02 PST
https://trac.webkit.org/r177957
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug