Resolve mirroring and variant in Font instead of FontGlyphs https://bugs.webkit.org/show_bug.cgi?id=140079

Reviewed by Darin Adler.

Make FontGlyphs more focused. It doesn't need to know about resolving variants and mirroring.

* platform/graphics/Font.cpp:
(WebCore::Font::glyphDataForCharacter):
* platform/graphics/Font.h:
(WebCore::Font::glyphDataForCharacter): Deleted.
* platform/graphics/FontGlyphs.cpp:
(WebCore::FontGlyphs::glyphDataForCharacter):
* platform/graphics/FontGlyphs.h:



Canonical link: https://commits.webkit.org/158087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177957 268f45cc-cd09-0410-ab3c-d52691b4dbfc